# zip-linearizer

./: .gitignore  README.md  README_RU.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  format.yml  release.yml
src/zip_linearizer/: __init__.py
src/zip_linearizer/config/: __init__.py  settings.py
src/zip_linearizer/core/: __init__.py  cli.py  exceptions.py  file_processor.py  github_handler.py  statistics.py  text_file_detector.py  validator.py
src/zip_linearizer/utils/: __init__.py  decoder.py  logger.py
tests/: __init__.py  conftest.py  test_cli.py  test_decoder.py  test_exceptions.py  test_file_processor.py  test_github_handler.py  test_statistics.py  test_text_file_detector.py  test_validator.py
